<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_food"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/foodNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/food_name"/>

        <EditText
            android:id="@+id/caloriesEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/calories"
            android:inputType="number"/>

        <EditText
            android:id="@+id/proteinEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/protein"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/carbsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/carbs"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/fatEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/fat"
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/saveFoodButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/save_food"/>
    </LinearLayout>
</ScrollView>
